--- a/módulo D/site idade/index.html
+++ b/módulo D/site idade/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Detector de idade</title>
+    <title>Verificador de Idade</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Verificador de Idade</h1>
+    </header>
+    <section>
+        <div>
+            <p>Ano de Nascimento:
+                <input type="number" name="txtano" id="txtano" min="0">
+            </p>
+            <p>Sexo:
+                <input type="radio" name="radsex" id="masc" checked>
+                <label for="masc">Masculino</label>
+                <input type="radio" name="radsex" id="fem">
+                <label for="fem">Feminino</label>
+            </p>
+
+            <p>
+                <input type="button" value="VERIFICAR" onclick="verificar()">
+            </p>
+        </div>
+
+        <div id="res">
+            <p>Preencha os dados acima e veja o resultado!</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; Gilberto Xavier</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
